# ig-client

./: .gitignore  Cargo.toml  Makefile  README.md
Data/: historical_prices_date_range_CS_D_EURUSD_CFD_IP_HOUR.json  historical_prices_v1_CS_D_EURUSD_CFD_IP_HOUR.json  historical_prices_v2_CS_D_EURUSD_CFD_IP_HOUR.json  market_details.json  market_hierarchy_root.json  market_search_Daily_Germany_40.json  recent_prices_CS_D_EURUSD_CFD_IP.json
Docker/: Dockerfile
doc/: AUTHENTICATION.md  NEW_CLIENT_API.md  RATE_LIMITER.md
docs/: INTEGRATION_GUIDE.md  OAUTH_TOKEN_REFRESH.md
examples/OLD/: filtered_market_storage.rs  market_hierarchy.rs  market_hierarchy_to_db.rs  market_summary.rs  recent_prices_example.rs  vec_db_entries_table.rs
examples/account/: Cargo.toml
examples/chart/: Cargo.toml
examples/market/: Cargo.toml  README_DATABASE.md
examples/other/: Cargo.toml
examples/positions/: Cargo.toml
examples/prices/: Cargo.toml
examples/simples/: Cargo.toml
examples/trade/: Cargo.toml
sql/: market_hierarchy_schema.sql  migrate_to_double_precision.sql
src/: auth.rs  client.rs  config.rs  constants.rs  error.rs  lib.rs  prelude.rs
src/application/: auth.rs  client.rs  config.rs  mod.rs  rate_limiter.rs
src/application/interfaces/: account.rs  listener.rs  market.rs  mod.rs  order.rs
src/application/models/: account.rs  market.rs  mod.rs  order.rs  transaction.rs
src/application/services/: account_service.rs  market_service.rs  mod.rs  order_service.rs  types.rs
src/application/services/interfaces/: account.rs  market.rs  mod.rs
src/application/to_delete/: market_service.rs
src/model/: auth.rs  http.rs  mod.rs  requests.rs  responses.rs  retry.rs  utils.rs
src/presentation/: account.rs  chart.rs  instrument.rs  market.rs  mod.rs  order.rs  price.rs  trade.rs  transaction.rs  working_order.rs
src/session/: auth.rs  interface.rs  response.rs
src/storage/: config.rs  historical_prices.rs  market_database.rs  market_persistence.rs  mod.rs  utils.rs
src/transport/: http_client.rs
src/utils/: config.rs  finance.rs  id.rs  mod.rs  parsing.rs  rate_limiter.rs  session_helper.rs
tests.old/unit/application/models/: order_tests.rs
tests.old/unit/session/: auth_tests.rs  relogin_tests.rs
tests.old/unit/transport/: http_client_tests.rs
tests/integration/: account_tests.rs  auth_tests.rs  common.rs  market_tests.rs  mod.rs  order_tests.rs  position_tests.rs
tests/unit/: config_tests.rs  mod.rs  test_error.rs
tests/unit/application/: mod.rs  test_auth.rs  test_client.rs  test_listener.rs
tests/unit/application/models/: order_tests.rs  test_auth.rs  transaction_tests.rs
tests/unit/model/: mod.rs  test_auth.rs  test_config.rs  test_requests.rs  test_responses.rs
tests/unit/presentation/: mod.rs  test_account.rs  test_chart.rs  test_market.rs  test_price.rs  test_serialization.rs  test_trade.rs  test_transaction.rs
tests/unit/session/: auth_tests.rs  mod.rs  relogin_tests.rs  token_timer_tests.rs
tests/unit/storage/: mod.rs  test_historical_prices.rs  test_market_database.rs  test_utils.rs
tests/unit/utils/: finance_tests.rs  mod.rs  test_config.rs  test_finance.rs  test_id.rs  test_model_utils.rs  test_retry.rs
(+3 files in other folders)
